# split-colors

./: README.md  pyproject.toml
src/split_colors/: __init__.py
